# zloader

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml
.cargo/: config.toml
scripts/: build.py  encoder.py
scripts/templates/: consts.rs.j2  download.rs.j2  exec.rs.j2
scripts/templates/allocators/: virtualalloc.rs.j2
scripts/templates/decoders/: aes256.rs.j2  base32.rs.j2
scripts/templates/mappers/: library.rs.j2  shellcode.rs.j2
scripts/templates/stagers/: http.rs.j2  meterpreter.rs.j2
src/: main.rs
src/allocator/: mod.rs  virtual_alloc.rs
src/decoder/: aes.rs  base32.rs  chacha.rs  mod.rs
src/evasion/: file.rs  mod.rs  thread.rs  time.rs
src/mapper/: library.rs  mod.rs  shellcode.rs
src/stager/: http.rs  meterpreter.rs  mod.rs  tls.rs
