cargo-features = ["panic-immediate-abort"]
[package]
name = "zloader"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.release]
panic = "immediate-abort"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
aes-gcm = "0.10.3"
base32 = "0.5.1"
chacha20poly1305 = "0.10.1"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["blocking"] }
load-library-rs = { git = "https://github.com/zwsyscall/load_library_rs.git" }
windows = { version = "0.62.2", features = [
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
obfuse = "1.0"

[build-dependencies]
uuid = { version = "1.8", features = ["v4"] }
